udating card section

--- a/index.html
+++ b/index.html
@@ -89,27 +89,27 @@
               <div class="movie-list-container">
                 <div class="movie-list">
                   <div class="movie-card">
-                    <div class="movie-poster" style="background-image: url('/ironman.jpg?height=200&width=150&text=Cleaner')"></div>
+                    <div class="movie-poster" style="background-image: url('ironman.jpg?height=200&width=150&text=Cleaner')"></div>
                     <div class="movie-title">Iron Man</div>
                     <div class="movie-rating">Popularity - 9.4</div>
                   </div>
                   <div class="movie-card">
-                    <div class="movie-poster" style="background-image: url('/hulk.webp?height=200&width=150&text=Cosmic+Chaos')"></div>
+                    <div class="movie-poster" style="background-image: url('hulk.webp?height=200&width=150&text=Cosmic+Chaos')"></div>
                     <div class="movie-title">The Incredible Hulk</div>
                     <div class="movie-rating">Popularity - 9.4</div>
                   </div>
                   <div class="movie-card">
-                    <div class="movie-poster" style="background-image: url('/ironman2.jpg?height=200&width=150&text=Carjackers')"></div>
+                    <div class="movie-poster" style="background-image: url('ironman2.jpg?height=200&width=150&text=Carjackers')"></div>
                     <div class="movie-title">Iron Man 2</div>
                     <div class="movie-rating">Popularity - 9.4</div>
                   </div>
                   <div class="movie-card">
-                    <div class="movie-poster" style="background-image: url('/thor.webp?height=200&width=150&text=Captain+America')"></div>
+                    <div class="movie-poster" style="background-image: url('thor.webp?height=200&width=150&text=Captain+America')"></div>
                     <div class="movie-title">Thor</div>
                     <div class="movie-rating">Popularity - 9.4</div>
                   </div>
                   <div class="movie-card">
-                    <div class="movie-poster" style="background-image: url('/captainamerica.jpg?height=200&width=150&text=The+Codes+of+War')"></div>
+                    <div class="movie-poster" style="background-image: url('captainamerica.jpg?height=200&width=150&text=The+Codes+of+War')"></div>
                     <div class="movie-title">Captain America: The First Avenger</div>
                     <div class="movie-rating">Popularity - 9.4</div>
                   </div>
