solved image path

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
             <div>
                 <div class="section-title">#Popular Movies</div>
                 <div class="featured-movies">
-                  <div class="featured-movie" style="background-image: url('/clean.webp?height=400&width=700&text=Cleaner')">
+                  <div class="featured-movie" style="background-image: url('clean.webp')">
                     <div class="featured-movie-title">Cleaner</div>
                   </div>
-                  <div class="featured-movie" style="background-image: url('/avengers.jpg?height=400&width=700&text=Cosmic+Chaos')">
+                  <div class="featured-movie" style="background-image: url('avengers.jpg')">
                     <div class="featured-movie-title">Avengers</div>
                     <div class="featured-movie-tagline">IN SPACE... THERE IS ONLY MARVEL</div>
                   </div>
